# xeom

./: CMakeLists.txt  README.md
core/: camera.h  pr.c  pr.h  rt.c  rt.h  scene.c  scene.h
error/: error.c  error.h
image/: image.c  image.h
math/: ray.c  ray.h  shape.c  shape.h  utility.c  utility.h  vec3d.c  vec3d.h
mm/: array.c  array.h
preview/: preview.c  preview.h
shader/: binary.c  callback.h  nothing.c  shader.h
shader/shaders/: binary.c  diffuse.c  metal.c  mirror.c  normal.c
xeom/: main.c
